add more test in backend