@@ -1,12 +1,10 @@
 package io.werescuecats.backend.service;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.*;
 
-import java.util.Arrays;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 
@@ -14,17 +12,18 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import io.werescuecats.backend.dto.AnonymousAdoptionData;
 import io.werescuecats.backend.entity.Adoption;
 import io.werescuecats.backend.entity.AdoptionStatus;
 import io.werescuecats.backend.entity.Cat;
 import io.werescuecats.backend.entity.CatStatus;
 import io.werescuecats.backend.entity.User;
+import io.werescuecats.backend.exception.CatNotAvailableException;
+import io.werescuecats.backend.exception.ResourceNotFoundException;
 import io.werescuecats.backend.repository.AdoptionRepository;
 
 @ExtendWith(MockitoExtension.class)
@@ -32,16 +31,16 @@ class AdoptionServiceTest {
 
     @Mock
     private AdoptionRepository adoptionRepository;
-    
+
     @Mock
     private CatService catService;
-    
+
     @Mock
     private UserService userService;
-    
+
     @InjectMocks
     private AdoptionService adoptionService;
-    
+
     private User testUser;
     private Cat testCat;
     private User adminUser;
@@ -54,11 +53,13 @@ class AdoptionServiceTest {
         testUser.setEmail("test@example.com");
         testUser.setFirstName("John");
         testUser.setLastName("Doe");
+        testUser.setStreetAddress("Street, City, Region");
 
         testCat = new Cat();
         testCat.setId(1L);
         testCat.setName("Fluffy");
         testCat.setStatus(CatStatus.AVAILABLE);
+        testCat.setBreed(null);
 
         adminUser = new User();
         adminUser.setId(2L);
@@ -68,134 +69,135 @@ class AdoptionServiceTest {
 
         testAdoption = new Adoption(testUser, testCat, "Test notes");
         testAdoption.setId(1L);
+        testAdoption.setStatus(AdoptionStatus.PENDING);
     }
 
     @Test
-    @DisplayName("Should create adoption successfully when user and cat exist and cat is available")
+    @DisplayName("Create adoption success")
     void createAdoption_Success() {
         when(userService.getUserById(1L)).thenReturn(Optional.of(testUser));
         when(catService.getCatById(1L)).thenReturn(Optional.of(testCat));
-        when(adoptionRepository.save(any(Adoption.class))).thenReturn(testAdoption);
+        when(adoptionRepository.save(any(Adoption.class))).thenAnswer(i -> i.getArgument(0));
 
-        Adoption result = adoptionService.createAdoption(1L, 1L, "Test notes");
+        Adoption result = adoptionService.createAdoption(1L, 1L, "Notes");
 
         assertNotNull(result);
         assertEquals(testUser, result.getUser());
         assertEquals(testCat, result.getCat());
-        assertEquals("Test notes", result.getNotes());
+        assertEquals("Notes", result.getNotes());
         assertEquals(AdoptionStatus.PENDING, result.getStatus());
 
+        verify(catService).updateCatStatus(1L, CatStatus.PENDING);
         verify(adoptionRepository).save(any(Adoption.class));
     }
 
     @Test
-    @DisplayName("Should throw exception when user not found")
+    @DisplayName("Create adoption throws when user not found")
     void createAdoption_UserNotFound() {
         when(userService.getUserById(1L)).thenReturn(Optional.empty());
 
-        RuntimeException exception = assertThrows(RuntimeException.class, 
-            () -> adoptionService.createAdoption(1L, 1L, "Test notes"));
-        
-        assertTrue(exception.getMessage().contains("User not found with id: 1"));
+        ResourceNotFoundException ex = assertThrows(ResourceNotFoundException.class,
+                () -> adoptionService.createAdoption(1L, 1L, "Notes"));
+
+        assertTrue(ex.getMessage().contains("User not found with id: 1"));
         verify(adoptionRepository, never()).save(any());
     }
 
     @Test
-    @DisplayName("Should throw exception when cat not found")
+    @DisplayName("Create adoption throws when cat not found")
     void createAdoption_CatNotFound() {
         when(userService.getUserById(1L)).thenReturn(Optional.of(testUser));
         when(catService.getCatById(1L)).thenReturn(Optional.empty());
 
-        RuntimeException exception = assertThrows(RuntimeException.class, 
-            () -> adoptionService.createAdoption(1L, 1L, "Test notes"));
-        
-        assertTrue(exception.getMessage().contains("Cat not found with id: 1"));
+        ResourceNotFoundException ex = assertThrows(ResourceNotFoundException.class,
+                () -> adoptionService.createAdoption(1L, 1L, "Notes"));
+
+        assertTrue(ex.getMessage().contains("Cat not found with id: 1"));
         verify(adoptionRepository, never()).save(any());
     }
 
     @Test
-    @DisplayName("Should throw exception when cat is not available")
+    @DisplayName("Create adoption throws when cat not available")
     void createAdoption_CatNotAvailable() {
         testCat.setStatus(CatStatus.ADOPTED);
         when(userService.getUserById(1L)).thenReturn(Optional.of(testUser));
         when(catService.getCatById(1L)).thenReturn(Optional.of(testCat));
 
-        RuntimeException exception = assertThrows(RuntimeException.class, 
-            () -> adoptionService.createAdoption(1L, 1L, "Test notes"));
-        
-        assertTrue(exception.getMessage().contains("Cat is not available for adoption: Fluffy"));
+        CatNotAvailableException ex = assertThrows(CatNotAvailableException.class,
+                () -> adoptionService.createAdoption(1L, 1L, "Notes"));
+
+        assertTrue(ex.getMessage().contains("Cat is not available for adoption: Fluffy"));
         verify(adoptionRepository, never()).save(any());
     }
 
     @Test
-    @DisplayName("Should approve adoption successfully")
+    @DisplayName("Approve adoption success")
     void approveAdoption_Success() {
         testAdoption.setStatus(AdoptionStatus.PENDING);
         when(adoptionRepository.findById(1L)).thenReturn(Optional.of(testAdoption));
-        when(adoptionRepository.save(any(Adoption.class))).thenReturn(testAdoption);
+        when(adoptionRepository.save(any(Adoption.class))).thenAnswer(i -> i.getArgument(0));
 
         Adoption result = adoptionService.approveAdoption(1L, adminUser);
 
         assertEquals(AdoptionStatus.APPROVED, result.getStatus());
         assertEquals(adminUser, result.getProcessedByAdmin());
         assertNotNull(result.getApprovedDate());
-        
+
         verify(catService).updateCatStatus(testCat.getId(), CatStatus.PENDING);
         verify(adoptionRepository).save(testAdoption);
     }
 
     @Test
-    @DisplayName("Should throw exception when trying to approve non-pending adoption")
-    void approveAdoption_InvalidStatus() {
-        // Given
+    @DisplayName("Approve adoption fails on wrong status")
+    void approveAdoption_WrongStatus() {
         testAdoption.setStatus(AdoptionStatus.COMPLETED);
         when(adoptionRepository.findById(1L)).thenReturn(Optional.of(testAdoption));
 
-        // When & Then
-        RuntimeException exception = assertThrows(RuntimeException.class, 
-            () -> adoptionService.approveAdoption(1L, adminUser));
-        
-        assertTrue(exception.getMessage().contains("Adoption must be PENDING to be transitioned to APPROVED"));
+        RuntimeException ex = assertThrows(RuntimeException.class,
+                () -> adoptionService.approveAdoption(1L, adminUser));
+
+        assertTrue(ex.getMessage().contains("Adoption must be PENDING to be transitioned to APPROVED"));
     }
 
     @Test
-    @DisplayName("Should complete adoption successfully")
+    @DisplayName("Complete adoption success")
     void completeAdoption_Success() {
         testAdoption.setStatus(AdoptionStatus.APPROVED);
         when(adoptionRepository.findById(1L)).thenReturn(Optional.of(testAdoption));
-        when(adoptionRepository.save(any(Adoption.class))).thenReturn(testAdoption);
+        when(adoptionRepository.save(any(Adoption.class))).thenAnswer(i -> i.getArgument(0));
 
         Adoption result = adoptionService.completeAdoption(1L, adminUser);
 
         assertEquals(AdoptionStatus.COMPLETED, result.getStatus());
         assertEquals(adminUser, result.getProcessedByAdmin());
         assertNotNull(result.getCompletedDate());
-        
+
         verify(catService).updateCatStatus(testCat.getId(), CatStatus.ADOPTED);
         verify(adoptionRepository).save(testAdoption);
     }
 
     @Test
-    @DisplayName("Should reject adoption successfully")
+    @DisplayName("Reject adoption success")
     void rejectAdoption_Success() {
         testAdoption.setStatus(AdoptionStatus.PENDING);
         when(adoptionRepository.findById(1L)).thenReturn(Optional.of(testAdoption));
-        when(adoptionRepository.save(any(Adoption.class))).thenReturn(testAdoption);
+        when(adoptionRepository.save(any(Adoption.class))).thenAnswer(i -> i.getArgument(0));
 
-        Adoption result = adoptionService.rejectAdoption(1L, adminUser, "Insufficient experience");
+        Adoption result = adoptionService.rejectAdoption(1L, adminUser, "Reason");
 
         assertEquals(AdoptionStatus.REJECTED, result.getStatus());
         assertEquals(adminUser, result.getProcessedByAdmin());
-        assertEquals("Insufficient experience", result.getAdminNotes());
-        
+        assertEquals("Reason", result.getAdminNotes());
+
+        verify(catService).updateCatStatus(testCat.getId(), CatStatus.AVAILABLE);
         verify(adoptionRepository).save(testAdoption);
     }
 
     @Test
-    @DisplayName("Should get pending adoptions")
+    @DisplayName("Get pending adoptions returns list")
     void getPendingAdoptions_Success() {
-        List<Adoption> pendingAdoptions = Arrays.asList(testAdoption);
-        when(adoptionRepository.findByStatus(AdoptionStatus.PENDING)).thenReturn(pendingAdoptions);
+        List<Adoption> list = List.of(testAdoption);
+        when(adoptionRepository.findByStatus(AdoptionStatus.PENDING)).thenReturn(list);
 
         List<Adoption> result = adoptionService.getPendingAdoptions();
 
@@ -204,10 +206,10 @@ class AdoptionServiceTest {
     }
 
     @Test
-    @DisplayName("Should get adoptions by user")
+    @DisplayName("Get adoptions by user returns list")
     void getAdoptionsByUser_Success() {
-        List<Adoption> userAdoptions = Arrays.asList(testAdoption);
-        when(adoptionRepository.findByUserId(1L)).thenReturn(userAdoptions);
+        List<Adoption> list = List.of(testAdoption);
+        when(adoptionRepository.findByUserId(1L)).thenReturn(list);
 
         List<Adoption> result = adoptionService.getAdoptionsByUser(1L);
 
@@ -216,33 +218,54 @@ class AdoptionServiceTest {
     }
 
     @Test
-    @DisplayName("Should get user adoption count")
-    void getUserAdoptionCount_Success() {
-        when(adoptionRepository.countCompletedAdoptionsByUser(1L)).thenReturn(3L);
+    @DisplayName("Get all adoptions returns list")
+    void getAllAdoptions_Success() {
+        List<Adoption> list = List.of(testAdoption);
+        when(adoptionRepository.findAll()).thenReturn(list);
 
-        long result = adoptionService.getUserAdoptionCount(1L);
+        List<Adoption> result = adoptionService.getAllAdoptions();
 
-        assertEquals(3L, result);
+        assertEquals(1, result.size());
+        assertEquals(testAdoption, result.get(0));
     }
 
-    @ParameterizedTest
-    @DisplayName("Should validate null parameters")
-    @ValueSource(strings = {"userId", "catId", "adoptionId", "admin"})
-    void validateNullParameters(String paramType) {
-        switch (paramType) {
-            case "userId":
-                assertThrows(Exception.class, () -> adoptionService.createAdoption(null, 1L, "notes"));
-                break;
-            case "catId":
-                assertThrows(Exception.class, () -> adoptionService.createAdoption(1L, null, "notes"));
-                break;
-            case "adoptionId":
-                assertThrows(Exception.class, () -> adoptionService.approveAdoption(null, adminUser));
-                break;
-            case "admin":
-                assertThrows(Exception.class, () -> adoptionService.approveAdoption(1L, null));
-                break;
-        }
+    @Test
+    @DisplayName("Get adoption by id returns adoption")
+    void getAdoptionById_Success() {
+        when(adoptionRepository.findById(1L)).thenReturn(Optional.of(testAdoption));
+
+        Optional<Adoption> result = adoptionService.getAdoptionById(1L);
+
+        assertTrue(result.isPresent());
+        assertEquals(testAdoption, result.get());
+    }
+
+    @Test
+    @DisplayName("Get user adoption count returns count")
+    void getUserAdoptionCount_Success() {
+        when(adoptionRepository.countCompletedAdoptionsByUser(1L)).thenReturn(5L);
+
+        long count = adoptionService.getUserAdoptionCount(1L);
+
+        assertEquals(5L, count);
+    }
+
+    @Test
+    @DisplayName("Get anonymous adoption data maps correctly")
+    void getAnonymousAdoptionData_Success() {
+        testAdoption.setStatus(AdoptionStatus.COMPLETED);
+        testAdoption.setAdoptionDate(LocalDateTime.of(2023, 1, 1, 12, 0));
+        when(adoptionRepository.findAll()).thenReturn(List.of(testAdoption));
+
+        List<AnonymousAdoptionData> result = adoptionService.getAnonymousAdoptionData();
+
+        assertEquals(1, result.size());
+        AnonymousAdoptionData data = result.get(0);
+        assertEquals(testAdoption.getAdoptionDate(), data.getAdoptionDate());
+        assertEquals("Unknown", data.getCatBreed());
+        assertEquals(testCat.getAge(), data.getCatAge());
+        assertEquals("Region", data.getLocationRegion());
+        assertEquals("COMPLETED", data.getStatus());
+        assertEquals(testAdoption.getTenantId(), data.getTenantId());
     }
 }
-
